-----------------------------------------------------------------------
** Ecasound - User-visible changes (NEWS)      (last edited: 170702) **
-----------------------------------------------------------------------

About the version numbers... "vX.Y[.Z][devT]" :

  X = major version  - the overall development status
  Y = minor version  - represents a set of planned features (see TODO);
		       an even number means stable while odd marks 
		       development releases
  Z = revision       - small changes to major.minor version (optional)
		
  devT = dev-release - development releases leading to the next stable
		       version

-----------------------------------------------------------------------

Last officially released version is -*> v2.0.4 *-

??072002 (v2.1dev11)
	- added: configure-check for socket libraries
	- added: -evp - volume peak watcher operator
	- changed: rewrite of all user-interface code that's
		   in the ecasound-x.y.z/ecasound directory
	- changed: added chainop and controller parameter 
		   descriptions back to ecasound's command-line 
		   help (--help/-h)
	- changed: ecasignalview rewritten; segfault bugs fixed,
		   consumes less cpu-resources, better interface
        - fixed: a long-standing bug in ecaplay that caused it 
		 to segfault with big playlists
	- fixed: LADSPA_PATH env.variable not parsed correctly
	- fixed: floating-point exceptions when run on alpha-linux
	- fixed: libecasound_tester failed on machines without
	 	 the LADSPA SDK plugins installed
24062002 (v2.1dev10)
	- added: -G:mgrtype,optstring switch for setting 
		 audio object manager level options
	- added: -G:jack,client_name,operation_mode option; see 
	         ecasound(1) for details
	- added: --enable-all-static configure option
	- added: --disable-jack configure option; disable JACK
		 support even if all required libs and headers
		 are found
	- changed: major data structure cleanup in the JACK
	 	   plugin