@@ -1,4 +1,4 @@
-.TH "ecasoundrc" "5" "25\&.04\&.2002" "" "Multimedia software" 
+.TH "ecasoundrc" "5" "23\&.07\&.2002" "" "Multimedia software" 
 .PP 
 .SH "NAME" 
 ecasoundrc \- ecasound rcfile
@@ -113,7 +113,7 @@ path to the output mp3, %S with sample rate in kHz, and
 .IP "ext-cmd-ogg-input" 
 Command for starting ogg input\&. All output should be directed
 to standard output\&. Before execution, "%f" is replaced with 
-path to the input ogg\&. Defaults to \fIogg123 -d raw --file=%F %f\fP\&.
+path to the input ogg\&. Defaults to \fIogg123 -d raw --file=- %f\fP\&.
 .IP 
 .IP "ext-cmd-ogg-output" 
 Command for starting ogg output\&. All input data should be read
