@@ -23,7 +23,7 @@
 <hr>
 
 <h1>ecasoundrc</h1>
-<h2>25.04.2002</h2>
+<h2>23.07.2002</h2>
 
 
     
@@ -120,7 +120,7 @@
 <p><p></p><dt><strong>ext-cmd-ogg-input</strong><dd>
 	Command for starting ogg input. All output should be directed
 	to standard output. Before execution, "%f" is replaced with 
-	path to the input ogg. Defaults to <em>ogg123 -d raw --file=%F %f</em>.
+	path to the input ogg. Defaults to <em>ogg123 -d raw --file=- %f</em>.
 <p><p></p><dt><strong>ext-cmd-ogg-output</strong><dd>
 	Command for starting ogg output. All input data should be read
 	from standard input. Before execution, "%f" is replaced with 
